Producto and Landing Page Fix
800px height screen not showing correctly is now fix with a media query

--- a/cliente/css/landing.css
+++ b/cliente/css/landing.css
@@ -36,7 +36,7 @@
 .content-container {
     width: 80%;
     position: absolute;
-    bottom: 5%;
+    bottom: 30%;
     left: 10%;
     padding: 20px;
     border-radius: 10px;
