--- a/css/landing.css
+++ b/css/landing.css
@@ -17,7 +17,7 @@
 .content-container {
     width: 80%;
     position: absolute;
-    bottom: 5%;
+    bottom: 30%;
     left: 10%;
     padding: 20px;
     border-radius: 10px;
@@ -39,6 +39,20 @@
     margin-bottom: 20px;
     width: 30%;
 }
+
+
+@media (max-height: 800px) {
+
+    .content-container {
+        width: 80%;
+        position: absolute;
+        bottom: 30%;
+        left: 10%;
+        padding: 20px;
+        border-radius: 10px;
+        
+    }
+  }
 
 @media (max-width: 1220px) {
 
@@ -88,5 +102,13 @@
         left: 10%;
         padding: 20px;
         border-radius: 10px;
+    }
+}
+
+
+@media (max-width: 400px) {
+    .content-container {
+
+        padding: 0;
     }
 }
