--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -3,18 +3,20 @@
 /* ---------------------------------- */
 
 #nosotros{
-    padding: 50px 0;
+    height: calc(100vh - 180px);
+    background-color: red;
 }
 
 #nosotros-title{    
+    
     text-align: center;
-    margin-bottom: 50px;
+    margin: 40px 0;
+    color: var(--white);
 }
 
 .about-us-container {
 
     width: 90%;
-    height: fit-content;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -23,9 +25,9 @@
 }
 
 .about-column {
+    
     width: 30%;
-    /* min-height:75vh; */
-    height: 100%;
+    height: 400px;
     padding: 20px;
     box-sizing: border-box;
     background-color: var(--white);
